Fixed Config payload issues and added gun related code for later updates